--- a/src/test/resources/druid.properties
+++ b/src/test/resources/druid.properties
@@ -1,7 +1,7 @@
-url:jdbc:mysql://localhost:3306/test
+url:jdbc:mysql://localhost:3306/yourdb
 driverClassName:com.mysql.jdbc.Driver
 username:root
-password:amdin
+password:admin
 
 filters:stat
 
